# glTF_MaterialX

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  build_no_update.bat  glTF2Mtlx.cpp
.github/workflows/: codacy.yml  main.yml
docs/: ABeautifulGame_fromgltf.mtlx  ABeautifulGame_fromtlx.gltf  BoomBoxWithAxes_fromgltf.mtlx  BoomBoxWithAxes_fromtlx.gltf  BoxVertexColors_fromgltf.mtlx  BoxVertexColors_fromtlx.gltf  DamagedHelmet_fromgltf.mtlx  DamagedHelmet_fromtlx.gltf  IridescenceLamp.gltf.mtlx  IridescenceLamp_fromgltf.mtlx  IridescenceLamp_fromtlx.gltf  TextureTransformTest_fromgltf.mtlx  TextureTransformTest_fromtlx.gltf  UnlitTest_fromgltf.mtlx  UnlitTest_fromtlx.gltf  glTF_fromgltf.mtlx  glTF_fromtlx.gltf  standard_surface_brass_tiled_baked.mtlx  standard_surface_brass_tiled_baked.mtlx_errors.txt  standard_surface_brass_tiled_distilled.mtlx  standard_surface_brass_tiled_fromtlx.gltf  standard_surface_brass_tiled_fromtlx.gltf_reimport.mtlx  standard_surface_brick_procedural_baked.mtlx  standard_surface_brick_procedural_baked.mtlx_errors.txt  standard_surface_brick_procedural_distilled.mtlx  standard_surface_brick_procedural_fromtlx.gltf  standard_surface_brick_procedural_fromtlx.gltf_reimport.mtlx  standard_surface_carpaint_baked.mtlx  standard_surface_carpaint_baked.mtlx_errors.txt  standard_surface_carpaint_distilled.mtlx  standard_surface_carpaint_fromtlx.gltf  standard_surface_carpaint_fromtlx.gltf_reimport.mtlx  standard_surface_chess_set.mtlx  standard_surface_chess_set_baked.mtlx  standard_surface_chess_set_baked.mtlx_errors.txt  standard_surface_chess_set_distilled.mtlx  standard_surface_chess_set_fromtlx.gltf  standard_surface_chess_set_fromtlx.gltf_reimport.mtlx  standard_surface_chrome_baked.mtlx  standard_surface_chrome_baked.mtlx_errors.txt  (+79 more)
documents/: Developer.md  NodeDescriptions.md
resources/: CMakeLists.txt
resources/ABeautifulGame/glTF/: ABeautifulGame.gltf.mtlx._converted.gltf
resources/BoomBoxWithAxes/glTF/: BoomBoxWithAxes_converted.gltf  BoomBoxWithAxes_converted.mtlx
resources/DamagedHelmet/glTF/: test_materials.mtlx  test_materials_.md
resources/TextureTransformTest/glTF/: TextureTransformTest_converted.gltf  TextureTransformTest_converted.mtlx
resources/glTFLogo/: glTF.gltf
resources/glTF_import/ABeautifulGame/glTF/: ABeautifulGame.gltf.mtlx  ABeautifulGame.gltf.mtlx._converted.gltf
resources/glTF_import/DamagedHelmet/glTF/: test_materials.osl
resources/glTF_import/UnlitTest/glTF/: UnlitTest.gltf.mtlx
resources/mtlx/: BoomBoxWithAxes.gltf.mtlx  BoomBoxWithAxes.gltf.mtlx._converted.gltf
source/MaterialXglTF/: CMakeLists.txt  CgltfMaterialHandler.h  CgltfMaterialLoader.h  CgtfMaterialHandler.cpp  CgtfMaterialLoader.cpp  Export.h  GltfMaterialHandler.cpp  GltfMaterialHandler.h  GltfMaterialUtil.cpp  GltfMaterialUtill.h  LICENSE
source/glTF2Mtx/: CMakeLists.txt  glTF2Mtlx.cpp
source/glTFMtlxTest/: CMakeLists.txt  LICENSE  Main.cpp
source/glTFMtlxTest/MaterialXglTF/: CMakeLists.txt  MaterialXglTF.cpp  gltf_aug_11_2022_test_first.docx
source/glTFTest/: CMakeLists.txt  glTF2Mtlx.cpp
